# guilds

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  requirements.txt
auth/: Dockerfile  README.md  pyproject.toml  settings.py
auth/auth/: settings.py
auth/users/: models.py  serializers.py  views.py
auth_service/app/: ab_testing.py  asgi.py  ldap_integration.py  middleware.py  settings.py  urls.py  utils.py  views.py  wsgi.py
auth_service/app/oauth_providers/: apple.py  google.py
auth_service/tests/: __init__.py
deployment/: Dockerfile
deployment/k8s/: deployment.yaml  ingress.yaml  service.yaml
feed/: Dockerfile  pyproject.toml
feed/feed/: asgi.py  settings.py  urls.py  views.py  wsgi.py
feed/news/: admin.py  forms.py  models.py  urls.py  views.py
feed/news/migrations/: 0001_initial.py  0002_alter_news_title.py
feed/news/templates/news/: add_news.html  news_list.html
logs/: README.md
profile/: Dockerfile
vacations/: Dockerfile
